--- a/task1_ML.ipynb
+++ b/task1_ML.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP+HKFErtax4mkrmH8cfgWJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +47,7 @@
         "import numpy as np  # numpy for numerical computations.\n",
         "import matplotlib.pyplot as plt  # matplotlib or seaborn for visualization.\n",
         "from sklearn.linear_model import LinearRegression\n",
-        "# scikit-learn for building and evaluating the regression model."
+        "# scikit-learn for building and evaluating the regression mode"
       ]
     },
     {
@@ -64,7 +63,7 @@
       "cell_type": "code",
       "source": [
         "# Load the dataset\n",
-        "data = pd.read_csv('/canada_per_capita_income.csv')\n",
+        "data = pd.read_csv('/content/canada_per_capita_income.csv')\n",
         "\n",
         "# Inspect the dataset\n",
         "print(data.head())\n"
@@ -257,10 +256,168 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Predict income for 2020**"
+      ],
+      "metadata": {
+        "id": "Ya-X7B31oOGj"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "years = np.array([1960, 1970, 1980, 1990, 2000, 2010])\n",
+        "income = np.array([400, 500, 600, 700, 800, 900])  # Example values, replace with real dataset\n",
+        "\n",
+        "# Initialize parameters\n",
+        "theta_0 = 0\n",
+        "theta_1 = 0\n",
+        "alpha = 0.01  # Learning rate\n",
+        "iterations = 1000\n",
+        "m = len(years)"
+      ],
       "metadata": {
         "id": "z6d9JQHzg-iy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean_year = np.mean(years)\n",
+        "range_year = np.max(years) - np.min(years)\n",
+        "years_normalized = (years - mean_year) / range_year\n"
+      ],
+      "metadata": {
+        "id": "XM5XUZqSpT5N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Hypothesis function**"
+      ],
+      "metadata": {
+        "id": "1h3aXc-anfmb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def hypothesis(x):\n",
+        "    return theta_0 + theta_1 * x\n",
+        "\n",
+        "# Cost function\n",
+        "def compute_cost():\n",
+        "    h = hypothesis(years_normalized)\n",
+        "    return (1 / (2 * m)) * np.sum((h - income) ** 2)\n",
+        "\n",
+        "# Gradient Descent\n",
+        "def gradient_descent():\n",
+        "    global theta_0, theta_1\n",
+        "    cost_history = []\n",
+        "\n",
+        "    for _ in range(iterations):\n",
+        "        h = hypothesis(years_normalized)\n",
+        "        theta_0 -= alpha * (1 / m) * np.sum(h - income)\n",
+        "        theta_1 -= alpha * (1 / m) * np.sum((h - income) * years_normalized)\n",
+        "\n",
+        "        # Store cost for every iteration to track the improvement\n",
+        "        cost_history.append(compute_cost())\n",
+        "\n",
+        "    return cost_history\n"
+      ],
+      "metadata": {
+        "id": "r0_B717UngCS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cost_history = gradient_descent()\n",
+        "print(f\"theta_0 (intercept): {theta_0}, theta_1 (slope): {theta_1}\")"
+      ],
+      "metadata": {
+        "id": "u3hwC1J7ppuk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Predict income for 2020**"
+      ],
+      "metadata": {
+        "id": "1V1ZnNxOn0Oq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "year_2020 = 2020\n",
+        "predicted_income_2020 = theta_0 + theta_1 * year_2020\n",
+        "print(f\"Predicted income for 2020: {predicted_income_2020}\")"
+      ],
+      "metadata": {
+        "id": "3NYGIRI6n08I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Plot the cost function history**"
+      ],
+      "metadata": {
+        "id": "fgUYyEdhpA7q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.plot(cost_history)\n",
+        "plt.xlabel(\"Iterations\")\n",
+        "plt.ylabel(\"Cost\")\n",
+        "plt.title(\"Cost Function during Gradient Descent\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "UqHCL2JGn_WI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Plot the regression line with the data points**"
+      ],
+      "metadata": {
+        "id": "j2NhMh1_p8S1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.scatter(years, income, color='red', label='Actual data')\n",
+        "predicted_income = theta_0 + theta_1 * years_normalized  # Predicted income\n",
+        "plt.plot(years, predicted_income, label='Linear regression', color='blue')\n",
+        "plt.xlabel(\"Year\")\n",
+        "plt.ylabel(\"Per Capita Income\")\n",
+        "plt.title(\"Linear Regression Fit\")\n",
+        "plt.legend()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "DDuhivCVp8wm"
       },
       "execution_count": null,
       "outputs": []
